# automation-demo

./: .gitignore  README.md  pyproject.toml
data/: sample.xlsx
resources/shared/: excel.resource
tasks/: employees.robot  excel_example.robot  excel_test.robot  javascript-snippet.robot  locator_chaining.robot  pagination_example.robot
