[tool.poetry]
name = "final"
version = "0.1.0"
description = ""
authors = ["Juan Vertiz <juan.vertiz@neoris.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
robotframework = "<7.0"
robotframework-seleniumlibrary = "^6.2.0"
rpaframework = "^28.4.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
